--- a/src/app/domains/info/pages/resume/resume.component.html
+++ b/src/app/domains/info/pages/resume/resume.component.html
@@ -1,5 +1,5 @@
 <div class="container text-center">
-  <button (click)="DownloadFile()" class="btn btn-primary mb-5 shadow border">Download PDF Resume</button>
+  <button (click)="DownloadFile()" class="btn btn-primary mb-5 shadow border">{{ 'DOWNLOAD_PDF_RESUME' | translate }}</button>
 
   <div class="pb-2">
     <accordion [isAnimated]="true" class="shadow">
@@ -8,7 +8,7 @@
         <button class="btn btn-block justify-content-between d-flex w-100" accordion-heading>
           <div style="visibility: hidden;">></div>
           <div class="btn-link">
-            <h4>Work Experience</h4>
+            <h4>{{ 'WORK' | translate }}</h4>
           </div>
 
           <div style="width: 10.95px;">
@@ -18,29 +18,89 @@
         </button>
 
         <div style="text-align: left;">
-          <h2 class="mb-0">Desarrollador de Software</h2>
-          <h3 class="text-primary">IAS Software</h3>
-          <h4 class="text-secondary">Date: 12/2022 - (Actual)</h4>
+          <h2 class="text-primary">{{ 'IAS_JOB_1' | translate }}</h2>
+          <h3 class="mb-0">IAS Software</h3>
+          <h4 class="text-secondary">{{ 'DATE' | translate }}: 07/2023 - ({{ 'PRESENT' | translate }})</h4>
           <ul>
-            <li>Desarrollo y mantenimiento de aplicaciones backend utilizando Java y Spring Boot.</li>
-            <li>Competencias sólidas en la inyección de dependencias para garantizar la modularidad y la facilidad de mantenimiento.</li>
-            <li>Desarrollo y mantenimiento de aplicaciones frontend utilizando Html, CSS y Angular.</li>
-            <li>Competencias sólidas en cumplir con el principio de una sola responsabilidad.</li>
-            <li>Implementación de servicios API REST para la exposición de funcionalidades clave, siguiendo los estándares de diseño y buenas prácticas.</li>
-            <li>Acceso eficiente a bases de datos utilizando tecnologías como JDBC y JPA para garantizar la integridad y la gestión de datos.</li>
-            <li>Colaboración activa en la exposición y consumo de servicios web, facilitando la integración de sistemas externos y mejorando la eficiencia operativa.</li>
-            <li>Competencias sólidas en programación orientada a objetos (POO) y familiaridad con conceptos de programación funcional y reactiva.</li>
+            <li>{{ 'IAS_SD_OBJECTIVE_1' | translate }}</li>
+            <li>{{ 'IAS_SD_OBJECTIVE_2' | translate }}</li>
+            <li>{{ 'IAS_SD_OBJECTIVE_3' | translate }}</li>
+            <li>{{ 'IAS_SD_OBJECTIVE_4' | translate }}</li>
+            <li>{{ 'IAS_SD_OBJECTIVE_5' | translate }}</li>
+            <li>{{ 'IAS_SD_OBJECTIVE_6' | translate }}</li>
+            <li>{{ 'IAS_SD_OBJECTIVE_7' | translate }}</li>
+            <li>{{ 'IAS_SD_OBJECTIVE_8' | translate }}</li>
           </ul>
         </div>
-        <hr>
+
+        <hr/>
+
         <div style="text-align: left;">
-          <h2 class="mb-0">Analista Desarrollador </h2>
-          <h3 class="text-primary">Grupo Avalon</h3>
-          <h4 class="text-secondary">Date: 06/2022 - 11/2022</h4>
+          <h2 class="text-primary">{{ 'IAS_JOB_2' | translate }}</h2>
+          <h3 class="mb-0">IAS Software</h3>
+          <h4 class="text-secondary">{{ 'DATE' | translate }}: 12/2022 - 06/2023</h4>
           <ul>
-            <li>Desarrollo y mantenimiento de aplicaciones en Java para integrar y procesar datos en proyectos de Web Scraping.</li>
-            <li>Desarrollo y mantenimiento de aplicaciones en Java para el diseño, visualización de cuadros de mando y KPIs utilizando HTML, CSS, JavaScript, y Angular.</li>
-            <li>Desarrollo y mantenimiento de aplicaciones en Java para análisis y generación de estadísticas relacionadas con el turismo.</li>
+            <li>{{ 'IAS_DWH_OBJECTIVE_1' | translate }}</li>
+            <li>{{ 'IAS_DWH_OBJECTIVE_2' | translate }}</li>
+            <li>{{ 'IAS_DWH_OBJECTIVE_3' | translate }}</li>
+            <li>{{ 'IAS_DWH_OBJECTIVE_4' | translate }}</li>
+          </ul>
+        </div>
+
+        <hr/>
+
+        <div style="text-align: left;">
+          <h2 class="text-primary">{{ 'AVALON_JOB' | translate }}</h2>
+          <h3 class="mb-0">Avalon Group</h3>
+          <h4 class="text-secondary">{{ 'DATE' | translate }}: 06/2022 - 11/2022</h4>
+          <ul>
+            <li>{{ 'AVALON_OBJECTIVE_1' | translate }}</li>
+            <li>{{ 'AVALON_OBJECTIVE_2' | translate }}</li>
+            <li>{{ 'AVALON_OBJECTIVE_3' | translate }}</li>
+            <li>{{ 'AVALON_OBJECTIVE_4' | translate }}</li>
+          </ul>
+        </div>
+
+        <hr/>
+
+        <div style="text-align: left;">
+          <h2 class="text-primary">{{ 'EMTELCO_JOB_1' | translate }}</h2>
+          <h3 class="mb-0">Emtelco CX & BPO</h3>
+          <h4 class="text-secondary">{{ 'DATE' | translate }}: 03/2021 - 06/2022</h4>
+          <ul>
+            <li>{{ 'EMTELCO_BI_OBJECTIVE_1' | translate }}</li>
+            <li>{{ 'EMTELCO_BI_OBJECTIVE_2' | translate }}</li>
+            <li>{{ 'EMTELCO_BI_OBJECTIVE_3' | translate }}</li>
+            <li>{{ 'EMTELCO_BI_OBJECTIVE_4' | translate }}</li>
+          </ul>
+        </div>
+
+        <hr/>
+
+        <div style="text-align: left;">
+          <h2 class="text-primary">{{ 'ULTRACOM_JOB' | translate }}</h2>
+          <h3 class="mb-0">Ultracom IT S.A.S</h3>
+          <h4 class="text-secondary">{{ 'DATE' | translate }}: 12/2019 - 03/2021</h4>
+          <ul>
+            <li>{{ 'ULTRACOM_OBJECTIVE_1' | translate }}</li>
+            <li>{{ 'ULTRACOM_OBJECTIVE_2' | translate }}</li>
+            <li>{{ 'ULTRACOM_OBJECTIVE_3' | translate }}</li>
+            <li>{{ 'ULTRACOM_OBJECTIVE_4' | translate }}</li>
+          </ul>
+        </div>
+
+        <hr/>
+
+        <div style="text-align: left;">
+          <h2 class="text-primary">{{ 'EMTELCO_JOB_2' | translate }}</h2>
+          <h3 class="mb-0">Emtelco CX & BPO</h3>
+          <h4 class="text-secondary">{{ 'DATE' | translate }}: 12/2011 - 11/2019</h4>
+          <ul>
+            <li>{{ 'EMTELCO_PyC_OBJECTIVE_1' | translate }}</li>
+            <li>{{ 'EMTELCO_PyC_OBJECTIVE_2' | translate }}</li>
+            <li>{{ 'EMTELCO_PyC_OBJECTIVE_3' | translate }}</li>
+            <li>{{ 'EMTELCO_PyC_OBJECTIVE_4' | translate }}</li>
+            <li>{{ 'EMTELCO_PyC_OBJECTIVE_5' | translate }}</li>
           </ul>
         </div>
 
@@ -50,7 +110,7 @@
         <button class="btn btn-block justify-content-between d-flex w-100" accordion-heading>
           <div style="visibility: hidden;">></div>
           <div class="btn-link">
-            <h4>Sector Experience</h4>
+            <h4>{{ 'SECTOR' | translate }}</h4>
           </div>
 
           <div style="width: 10.95px;">
@@ -61,12 +121,12 @@
 
         <div style="text-align: left;">
           <ul>
-            <li>Financial</li>
-            <li>Retail</li>
-            <li>Transport</li>
-            <li>Telecomunications</li>
-            <li>Tech</li>
-            <li>Tourism</li>
+            <li>{{ 'SECTOR_INFO_1' | translate }}</li>
+            <li>{{ 'SECTOR_INFO_2' | translate }}</li>
+            <li>{{ 'SECTOR_INFO_3' | translate }}</li>
+            <li>{{ 'SECTOR_INFO_4' | translate }}</li>
+            <li>{{ 'SECTOR_INFO_5' | translate }}</li>
+            <li>{{ 'SECTOR_INFO_6' | translate }}</li>
           </ul>
         </div>
       </accordion-group>
@@ -75,7 +135,7 @@
         <button class="btn btn-block justify-content-between d-flex w-100" accordion-heading>
           <div style="visibility: hidden;">></div>
           <div class="btn-link">
-            <h4>Education</h4>
+            <h4>{{ 'EDUCATION' | translate }}</h4>
           </div>
 
           <div style="width: 10.95px;">
@@ -85,23 +145,26 @@
         </button>
 
         <div style="text-align: left;">
-          <h2 class="mb-0">Especialista en Inteligencia de Negocios</h2>
-          <h3 class="text-primary">Católica del Norte Fundación Universitaria</h3>
-          <h4 class="text-secondary">Date: 07/2018 - 08/2019</h4>
+          <h2 class="text-primary">{{ 'UNIVERSITY_TITLE_1' | translate }}</h2>
+          <h3 class="text-secondary">{{ 'UNIVERSITY_NAME' | translate }}</h3>
+          <h4 class="mb-0">{{ 'DATE' | translate }}: 07/2018 - 08/2019</h4>
         </div>
-        <hr>
+
+        <hr/>
+
         <div style="text-align: left;">
-          <h2 class="mb-0">Ingeniero Informático</h2>
-          <h3 class="text-primary">Católica del Norte Fundación Universitaria</h3>
-          <h4 class="text-secondary">Date: 12/2014 - 11/2017</h4>
+          <h2 class="text-primary">{{ 'UNIVERSITY_TITLE_2' | translate }}</h2>
+          <h3 class="text-secondary">{{ 'UNIVERSITY_NAME' | translate }}</h3>
+          <h4 class="mb-0">{{ 'DATE' | translate }}: 12/2014 - 11/2017</h4>
         </div>
+
       </accordion-group>
 
       <accordion-group [(isOpen)]="isSkillsOpen">
         <button class="btn btn-block justify-content-between d-flex w-100" accordion-heading>
           <div style="visibility: hidden;">></div>
           <div class="btn-link">
-            <h4>Skills</h4>
+            <h4>{{ 'SKILLS' | translate }}</h4>
           </div>
 
           <div style="width: 10.95px;">
@@ -112,7 +175,7 @@
 
         <div class="row" style="text-align: left">
           <div class="col">
-            <h3>Programing Languages:</h3>
+            <h3>{{ 'PROGRAMING_LANGUAGES' | translate }}:</h3>
             <ul>
               <li>Java</li>
               <li>Python</li>
@@ -130,17 +193,17 @@
           </div>
 
           <div class="col">
-            <h3>Database:</h3>
+            <h3>{{ 'DATABASE' | translate }}:</h3>
             <ul>
               <li>PostgreSQL</li>
               <li>SQL Server</li>
-              <li>ORACLE</li>
-              <li>MYSQL</li>
+              <li>Oracle</li>
+              <li>MySQL</li>
             </ul>
           </div>
 
           <div class="col">
-            <h3>Cloud Computing:</h3>
+            <h3>{{ 'CLOUD_COMPUTING' | translate }}:</h3>
             <ul>
               <li>Azure</li>
               <li>AWS</li>
@@ -148,7 +211,7 @@
           </div>
 
           <div class="col">
-            <h3>Testing:</h3>
+            <h3>{{ 'TESTING' | translate }}:</h3>
             <ul>
               <li>Unit Test</li>
               <li>Performance Test</li>
@@ -156,7 +219,7 @@
           </div>
 
           <div class="col">
-            <h3>Other Skills:</h3>
+            <h3>{{ 'OTHER_SKILLS' | translate }}:</h3>
             <ul>
               <li>Source Control via Git</li>
               <li>Clean Architecture</li>
@@ -177,7 +240,7 @@
         <button class="btn btn-block justify-content-between d-flex w-100" accordion-heading>
           <div style="visibility: hidden;">></div>
           <div class="btn-link">
-            <h4>Languages</h4>
+            <h4>{{ 'LANGUAGES' | translate }}</h4>
           </div>
 
           <div style="width: 10.95px;">
